[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/tinier.tres" type="DynamicFont" id=1]
[ext_resource path="res://resources/tiny2.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/tinierBold.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/DialogScene.gd" type="Script" id=4]

[node name="Dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Next" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -70.0
margin_right = 241.0
margin_bottom = 7.0
text = "Next"

[node name="RichTextLabelTiny" type="RichTextLabel" parent="."]
margin_right = 476.0
margin_bottom = 419.0
custom_fonts/italics_font = ExtResource( 1 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "HEllo I'm tiny
[b]Hello I'm TinierBold[/b]
[i]Hello I'm Tinier[/i]"
text = "HEllo I'm tiny
Hello I'm TinierBold
Hello I'm Tinier"

[node name="RichTextLabelDefault" type="RichTextLabel" parent="."]
margin_left = -1.0
margin_top = 428.0
margin_right = 475.0
margin_bottom = 649.0
bbcode_enabled = true
bbcode_text = "HEllo I'm tiny
[b]Hello I'm TinierBold[/b]
[i]Hello I'm Tinier[/i]"
text = "HEllo I'm tiny
Hello I'm TinierBold
Hello I'm Tinier"

[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
